[gd_scene load_steps=49 format=2]

[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_011.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WraithTeal.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_010.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_009.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_004.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_005.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_007.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_006.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_008.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_000.png" type="Texture" id=10]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_001.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_002.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Wraith_Teal/Idle/Wraith_01_Idle_003.png" type="Texture" id=13]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_006.png" type="Texture" id=14]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_010.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_007.png" type="Texture" id=16]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_011.png" type="Texture" id=17]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_000.png" type="Texture" id=18]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_001.png" type="Texture" id=19]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_008.png" type="Texture" id=20]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_009.png" type="Texture" id=21]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_000.png" type="Texture" id=22]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_001.png" type="Texture" id=23]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_002.png" type="Texture" id=24]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_004.png" type="Texture" id=25]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_003.png" type="Texture" id=26]
[ext_resource path="res://Enemies/Wraith_Teal/Walking/Wraith_01_Moving Forward_005.png" type="Texture" id=27]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_013.png" type="Texture" id=28]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_002.png" type="Texture" id=29]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_007.png" type="Texture" id=30]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_011.png" type="Texture" id=31]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_008.png" type="Texture" id=32]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_017.png" type="Texture" id=33]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_004.png" type="Texture" id=34]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_003.png" type="Texture" id=35]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_010.png" type="Texture" id=36]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_009.png" type="Texture" id=37]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_014.png" type="Texture" id=38]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_012.png" type="Texture" id=39]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_015.png" type="Texture" id=40]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_016.png" type="Texture" id=41]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_006.png" type="Texture" id=42]
[ext_resource path="res://Enemies/Wraith_Teal/Casting Spells/Wraith_01_Casting Spells_005.png" type="Texture" id=43]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 17.5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 33 ) ],
"loop": true,
"name": "SpellCast",
"speed": 11.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "Walking",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 19 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]

[node name="WraithTeal" type="KinematicBody2D" groups=["Enemy", "Wraith"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( -1, -13 )
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 7 )
animation = "SpellCast"
frame = 10
playing = true

[node name="CastPoint" type="Position2D" parent="."]
position = Vector2( 10, -8 )

[node name="Area2D" type="Area2D" parent="." groups=["Slime"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -13 )
shape = SubResource( 6 )

[node name="TerrainCheck" type="KinematicBody2D" parent="." groups=["TerrainCheck"]]
position = Vector2( 30, 20 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck"]
shape = SubResource( 4 )

[node name="TerrainArea" type="Area2D" parent="TerrainCheck"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck/TerrainArea"]
shape = SubResource( 3 )

[node name="TerrainCheck2" type="KinematicBody2D" parent="." groups=["TerrainCheck2"]]
position = Vector2( -30, 20 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck2"]
shape = SubResource( 4 )

[node name="TerrainArea2" type="Area2D" parent="TerrainCheck2"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainCheck2/TerrainArea2"]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="TerrainCheck/TerrainArea" to="." method="_on_TerrainArea_body_entered"]
[connection signal="body_exited" from="TerrainCheck/TerrainArea" to="." method="_on_TerrainArea_body_exited"]
[connection signal="body_entered" from="TerrainCheck2/TerrainArea2" to="." method="_on_TerrainArea2_body_entered"]
[connection signal="body_exited" from="TerrainCheck2/TerrainArea2" to="." method="_on_TerrainArea2_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
